Build submission for I20080303-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,36 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 02, 2009, 3:39 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=54581">Bug 54581</a>. [GlobalActions] Provide API constants for actionDefinitionIDs/commandIDs (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=57762">Bug 57762</a>. [Dialogs] honor the platform button dismissal alignment on Mac and GTK (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=151711">Bug 151711</a>. [Commands] [IDE] Make QuickMenuAction API (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=201663">Bug 201663</a>. [WorkingSets] [WorkingSets] Working set selection dialog in Project Explorer has conflicting mnemonic keys (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=225601">Bug 225601</a>. Adopt API tooling for UI bundles (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=226746">Bug 226746</a>. [Commands] Handler updates UI using wrong selection after right-click in different view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=227544">Bug 227544</a>. [DataBinding] provisional internal packages should be tagged as x-internal:= true (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=230270">Bug 230270</a>. [DataBinding] Ignore internal implementers/extenders of @noimplement/@noextend interfaces (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=240697">Bug 240697</a>. [DataBinding] StringToNumberConverter extends non-API type NumberFormatConverter (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258772">Bug 258772</a>. [DataBinding] Eliminate deprecated API filters (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263693">Bug 263693</a>. [DataBinding] Remove dead / deprecated APIs (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263845">Bug 263845</a>. [CommonNavigator] Drag/drop folder from non-Java Proj to Java Proj does copy instead of move sometimes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263855">Bug 263855</a>. [Import/Export] [Wizards] Request Project Import Wizard allow for an initial / pre-populated path (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264845">Bug 264845</a>. [Contributions] WorkbenchServiceRegistry fails with ArrayStoreException (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264954">Bug 264954</a>. [DataBinding] Properties.observableValue() for observing IObservableValue#value (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265180">Bug 265180</a>. Preferences: Change 'Enable colored labels' to 'styled' (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265317">Bug 265317</a>. [CommonNavigator] LabelProvider disposal handling not correct (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265727">Bug 265727</a>. [DataBinding] MultiListProperty and UnionSetProperty (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266062">Bug 266062</a>. [DataBinding] Observable<List|Set>[Tree]ContentProvider should be tagged @noextend (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266137">Bug 266137</a>. [Commands] test failure in testWorkbenchProvider (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266263">Bug 266263</a>. Quick Access dialog does not honor 'Use mixed fonts and colors for labels' preference (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266345">Bug 266345</a>. [Progress] WorkbenchSiteProgressServiceTest's testWaitCursor() is failing (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266659">Bug 266659</a>. [StatusHandling] Minimalize WSDM API changes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266699">Bug 266699</a>. [CommonNavigator] Remove CommonDropAdapter.setCurrentOperation (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266738">Bug 266738</a>. Failure in testTrackOutline (NEW)<br>
+  </p>
+
 <p>Integration Build (February 23, 2009, 5:03 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
