The map file has been updated for the following Bug changes: + Bug 184475. [Viewers] Handler conflicts when viewer types change (FIXED) + Bug 201116. [Viewers] Compare will silently discard additional contentMergeViewers associated with the same file extension (FIXED) + Bug 221583. Widget is disposed error in the .log file (FIXED) + Bug 259362. [Edit] Update diffs after undo (FIXED) + Bug 261613. Java compare does not give focus to editor (FIXED) + Bug 265740. [Apply Patch] Opening a patch that will create a file logs ResourceExceptions (FIXED) + Bug 265824. [Apply Patch] API to get lines from IHunks (FIXED) + Bug 265957. [Net] ProxyType.setProxyData(...) contains parameter that is never used (FIXED) + Bug 266089. Changes of 'Show Whitespaces Characters' preference in the JUnit Compare Editor are not notified to the Workspace (FIXED) + Bug 266504. NPE in CompareUIPlugin.findContentViewer (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.compare.core
org.eclipse.core.net
org.eclipse.compare.tests

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,21 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 03, 2009, 1:37 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=184475">Bug 184475</a>. [Viewers] Handler conflicts when viewer types change (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=201116">Bug 201116</a>. [Viewers] Compare will silently discard additional contentMergeViewers associated with the same file extension (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=221583">Bug 221583</a>. Widget is disposed error in the .log file (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259362">Bug 259362</a>. [Edit] Update diffs after undo (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261613">Bug 261613</a>. Java compare does not give focus to editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265740">Bug 265740</a>. [Apply Patch] Opening a patch that will create a file logs ResourceExceptions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265824">Bug 265824</a>. [Apply Patch] API to get lines from IHunks (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265957">Bug 265957</a>. [Net] ProxyType.setProxyData(...) contains parameter that is never used (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266089">Bug 266089</a>. Changes of 'Show Whitespaces Characters' preference in the JUnit Compare Editor are not notified to the Workspace (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266504">Bug 266504</a>. NPE in CompareUIPlugin.findContentViewer (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 24, 2009, 12:28 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
