updated build notes

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -100,6 +100,7 @@ value is no longer reliable.</p>
 
 <h2>February 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=267251">Bug 267251</a>: [launching] Add a RefreshTab.getID() implementation.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262261">262261</a>: Bug 262261 &ndash; [breadcrumb] Add actions to Debug view to switch between tree view, breadcrumb, or automatic modes.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262262">262262</a>: Bug 262262 &ndash; [breadcrumb] Add actions to quickly switch between contexts in Debug view.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262870">262870</a>: Bug 262870 &ndash; [breadcrumb] When debug view is activated no item has focus.<br>
