New core.net fragment for x86_64 tagged

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (marzec 06, 2009, 4:34 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257420">Bug 257420</a>. [Net] "System proxy configuration" option not working under Vista x64. (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 03, 2009, 1:37 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
