--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -113,6 +113,7 @@ should instead reference the new API constants.</p>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262811">Bug 262811</a>: [breadcrumb] Provide hooks to setup debugging in other perspectives<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=266162">Bug 266162</a>: Duplicates in prompt to save dirty resources before launching<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262849">Bug 262849</a>: [launching] Select Preferred Launcher dialog is somewhat confusing.<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=267438">Bug 267438</a>: IInernalDebugUIConstants.PREF_CHANGED_VALUE_BACKGROUND should be public.<br>
 
 <h2>February 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
