--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 08, 2009, 4:42 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=198971">Bug 198971</a>. [CommonNavigator] Provide extension schema for setting help ID (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256316">Bug 256316</a>. [EditorMgmt] getImageDescriptor() is not thread safe, has race condition (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258192">Bug 258192</a>. [DataBinding] Observable for objects the use JFace's IPropertyChangeListener (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264323">Bug 264323</a>. [CommonNavigator] CommonDragAdapterAssistant should be allowed to opt out of a drag (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 08, 2009, 1:04 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
