Build submission for I20090309-1300

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 09, 2009, 12:02 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=228129">Bug 228129</a>. [CommonNavigator] Test failure (disposed font) in org.eclipse.ui.tests.navigator_win32.win32.x86 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260373">Bug 260373</a>. [FilteredTree] Use Text.setMessage(...) where supported (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264323">Bug 264323</a>. [CommonNavigator] CommonDragAdapterAssistant should be allowed to opt out of a drag (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266839">Bug 266839</a>. [GlobalActions] Provide more API for commandIDs (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267469">Bug 267469</a>. [Help] WorkbenchHelpSystem.setHelp() should strip mnemonics (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267631">Bug 267631</a>. new core.databinding.observable bundle is missing legal files (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 08, 2009, 9:47 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
