The map file has been updated for the following Bug changes: + Bug 188646. [Sync View] Need API to associate help with a Sync page (FIXED) + Bug 257420. [Net] "System proxy configuration" option not working under Vista x64. (FIXED) + Bug 261229. [compare] Java compare editor: Ctrl+. opens content assist (FIXED) + Bug 265955. [Apply Patch] FileDiff should be the only class directly implementing IFilePatch2 (FIXED) + Bug 266981. [Apply Patch] ReaderCreator#canCreateReader should return false for null storage (FIXED) + Bug 267020. [Apply Patch] Rename FileDiffWrapper to FilePatch and FileDiff to FilePatch2 (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.compare.core
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.compare.tests
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 09, 2009, 5:42 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=188646">Bug 188646</a>. [Sync View] Need API to associate help with a Sync page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257420">Bug 257420</a>. [Net] "System proxy configuration" option not working under Vista x64. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261229">Bug 261229</a>. [compare] Java compare editor: Ctrl+. opens content assist (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265955">Bug 265955</a>. [Apply Patch] FileDiff should be the only class directly implementing IFilePatch2 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266981">Bug 266981</a>. [Apply Patch] ReaderCreator#canCreateReader should return false for null storage (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267020">Bug 267020</a>. [Apply Patch] Rename FileDiffWrapper to FilePatch and FileDiff to FilePatch2 (FIXED)<br>
+  </p>
+
 <p>Integration Build (marzec 06, 2009, 4:34 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
