--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 09, 2009, 9:55 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=162330">Bug 162330</a>. [CommonNavigator] Navigator Framework Sorters Need Override Capability (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267470">Bug 267470</a>. [Navigator] Deprecate the ResourceNavigator (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267655">Bug 267655</a>. [CommonNavigator] Compiler warnings in I20090309-0100 (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 09, 2009, 12:02 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
