--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 09, 2009, 6:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266877">Bug 266877</a>. [Structure Compare] Add human-readable label to structureMergeViewer schema definition (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 09, 2009, 5:42 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
