Buidl submission for I20090309-1800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 09, 2009, 4:36 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=248103">Bug 248103</a>. [PropertiesView] Multi-instance Properties View (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260664">Bug 260664</a>. [JFace] "Clear" works incorrectly in filtered preference dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262666">Bug 262666</a>. [EditorMgmt] EditorErrorPart fails on create (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265379">Bug 265379</a>. [Dialogs] Usability issues with "Open With" button in Open Resources dialog (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266839">Bug 266839</a>. [GlobalActions] Provide more API for commandIDs (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267712">Bug 267712</a>. [DataBinding] add ObservableMapCellLabelProvider (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 09, 2009, 9:55 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
