*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 09, 2009, 5:29 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=218884">Bug 218884</a>. [DataBinding] Add API: WorkbenchObservables (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267712">Bug 267712</a>. [DataBinding] add ObservableMapCellLabelProvider (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 09, 2009, 4:36 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
