--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 09, 2009, 9:13 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=234496">Bug 234496</a>. [DataBinding] ObservableValueEditingSupport: option to use IObservableFactory instead of subclassing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267722">Bug 267722</a>. [CommonNavigator] ClassCastException when synchronizing (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 09, 2009, 5:29 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
