--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 10, 2009, 3:58 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=217974">Bug 217974</a>. [Trim] [PerspectiveBar] Unable to close an "absent" perspective (REOPENED)<br>
+  </p>
+
 <p>Integration Build (March 09, 2009, 9:13 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
