*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 10, 2009, 5:58 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257919">Bug 257919</a>. [Viewers] OwnerDraw: Open type doesn't display the selected type (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=267748">Bug 267748</a>. UI Test Failure in org.eclipse.ui.tests.leaks.LeakTests.testBug265449PropertiesLeak (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 10, 2009, 3:58 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
