Bug 268073 - Entries about the old algorithm have to be removed from RangeDifferencer and package.html

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare.core/src/org/eclipse/compare/rangedifferencer/package.html
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare.core/src/org/eclipse/compare/rangedifferencer/package.html
@@ -13,10 +13,7 @@ two or three sequences of comparable entities.
 Package Specification</h2>
 
 The class <b>RangeDifferencer</b> finds longest sequences of matching and
-non-matching comparable entities. Its implementation is based on
-an objectified version of the algorithm described in:
-<i>A File Comparison Program,</i> by Webb Miller and Eugene W. Myers,
-Software Practice and Experience, Vol. 15, Nov. 1985.
+non-matching comparable entities.
 <p>
 
 Clients must supply the input to the differencer as an implementation
