--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 11, 2009, 5:54 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268022">Bug 268022</a>. [DataBinding] Master-detail observables should self-dispose when master observable is disposed. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268203">Bug 268203</a>. [DataBinding] SimpleListProperty should copy in getList() (FIXED)<br>
+  </p>
+
 <p>Integration Build (March 10, 2009, 5:58 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
