--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -109,6 +109,9 @@ should instead reference the new API constants.</p>
 
 <h2>March 10, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=258891">Bug 258891</a>: [Memory View] AbstractAsyncTableRendering.removeListeners susceptible to an NPE<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262705">Bug 262705</a>: [Memory View] CreateRendering "New Rendering..." tab is missing Enter key binding<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262845">Bug 262845</a>: [breadcrumb] breadcrumb causes performance degradation in stepping<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=266162">Bug 266162</a>: Duplicates in prompt to save dirty resources before launching<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262811">Bug 262811</a>: [breadcrumb] Provide hooks to setup debugging in other perspectives<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=266162">Bug 266162</a>: Duplicates in prompt to save dirty resources before launching<br>
