*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (March 12, 2009, 5:48 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268250">Bug 268250</a>. [CommonNavigator] Project labels missing in Project Explorer when working sets are top level elements (NEW)<br>
+  </p>
+
 <p>Integration Build (March 11, 2009, 5:54 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
